# modularity_and_efficiency

./: CMakeLists.txt  README.md  main.cpp
.github/workflows/: cmake-multi-platform.yml
